--- a/FMML_M1L1.ipynb
+++ b/FMML_M1L1.ipynb
@@ -1356,6 +1356,67 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Here’s an explanation addressing each of your questions:\n",
+        "\n",
+        "1. Which is the best combination of features?\n",
+        "\n",
+        "The \"best\" combination of features typically depends on the problem at hand and the algorithm being used. Feature selection techniques like Recursive Feature Elimination (RFE), Principal Component Analysis (PCA), and random forests can be used to identify the most relevant feature combinations. Cross-validation and evaluating feature importance scores can help determine the best set.\n",
+        "\n",
+        "\n",
+        "\n",
+        "2. How would you test or visualize four or more features?\n",
+        "\n",
+        "Pair plots or scatter matrix plots (like seaborn.pairplot) can give you a visual sense of pairwise relationships between features.\n",
+        "\n",
+        "For high-dimensional data, PCA or t-SNE (t-distributed stochastic neighbor embedding) can reduce dimensions for visualization, typically to 2D or 3D plots.\n",
+        "\n",
+        "Correlation heatmaps can help visualize multivariate relationships or redundancy in features.\n",
+        "\n",
+        "Additionally, clustering techniques like k-means or DBSCAN can be used to group data based on feature similarities and check the effectiveness of feature combinations.\n",
+        "\n",
+        "\n",
+        "\n",
+        "3. Can you come up with your own features?\n",
+        "\n",
+        "Yes, you can engineer new features based on domain knowledge. For example, in a dataset with time stamps, you could create features like the day of the week, weekend indicator, or time intervals. In image classification, you might generate color histograms, edge detection values, or other derived features.\n",
+        "\n",
+        "Feature creation can also be automated using tools like PolynomialFeatures to generate interaction terms and polynomial transformations of existing features.\n",
+        "\n",
+        "\n",
+        "\n",
+        "4. Will these features work for different classes other than 0 and 1?\n",
+        "\n",
+        "Yes, features designed for binary classification can be generalized to work for multiclass problems. For instance, using a one-vs-all or one-vs-one approach with classifiers like logistic regression or support vector machines can extend binary feature sets to multiple classes.\n",
+        "\n",
+        "For multiclass classification, some feature interactions might behave differently, but as long as the features are informative, they should still be valuable.\n",
+        "\n",
+        "\n",
+        "\n",
+        "5. What will happen if we take more than two classes at a time?\n",
+        "\n",
+        "If you have more than two classes, you move from a binary classification problem to a multiclass classification problem. Some models (like decision trees, k-nearest neighbors, and neural networks) can naturally handle multiple classes, while others (like logistic regression or SVM) need strategies like one-vs-rest or one-vs-one.\n",
+        "\n",
+        "The model complexity increases, and you’ll need different evaluation metrics (like a confusion matrix, F1 score for each class, macro/micro-averaged accuracy, etc.) to properly measure the model’s performance across multiple classes.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "In summary, feature selection, creation, and visualization methods all scale to multiclass problems, but evaluation and model complexity need to be adapted accordingly."
+      ],
+      "metadata": {
+        "id": "6c0OzMYLdjB5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "bxNFB7Tedb5N"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "> Exercise: Remember we took a subset of only the first two numbers in MNIST? Include 5 or more numbers now and try to visualise which feature works best when multiple numbers are involved. Brownie points if you use all numbers :)"
       ],
       "metadata": {
